# nekobin

./: .gitignore  Cargo.toml  Dockerfile  README.md  init.sql  rustfmt.toml
.github/workflows/: ci.yml
assets/js/: player.js  scripts.js
src/: auth.rs  config.rs  error.rs  main.rs  media.rs
src/api/: memes.rs  mod.rs  users.rs
src/frontend/: home.rs  item.rs  mod.rs
src/models/: comments.rs  memes.rs  mod.rs  tags.rs  users.rs  votes.rs
styles/: package.json  postcss.config.js  tailwind.config.js
styles/src/: base.scss  main.scss
styles/src/components/: button.scss  components.scss  index.scss  item-card.scss  navbar.scss  player.scss
templates/: base.html
templates/pages/: home.html  item.html
templates/parts/: header.html  navbar.html
