[package]
name = "nekobin"
version = "0.1.0"
authors = ["Atakku <atakkudev@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.12"
actix-files = "0.5"
actix-http = "2.2"
actix-session = "0.4"
actix-web = "3.3"
askama =  { version="0.10", features=["with-actix-web", "serde-json"]}
askama_actix = "0.11"
chrono = { version="0.4", features=["serde"] }
diesel = { version="1.4.7", features=["postgres", "serde_json", "r2d2", "chrono"] }
http = "0.2"
lazy_static = "1.4"
oauth2 = "4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1"
url = "2.2"
mime = "0.3"
env_logger = "0.9"